name:                j
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2020 Vanessa McHale
category:            Language, Interpreters
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
cabal-version:       1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

library
  hs-source-dirs:      src
  extra-libraries: j
  exposed-modules:     Language.J
  build-depends:       base >= 4.3 && < 5
                     , bytestring
                     , unix
  default-language:    Haskell2010
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  ghc-options:         -Wall

test-suite j-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , j
                     , tasty
                     , tasty-hunit
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/j-hs
